adminer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer-deploy
  namespace: mysql
spec:
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
      - name: ad-cont
        image: adminer
  replicas: 1
---
apiVersion: v1 
kind: Service
metadata:
  name: adminer-svc
  namespace: mysql
spec:
  selector:
    app: adminer
  ports:
    - name: adminer
      port: 8080
      nodePort: 30101
      targetPort: 8080
  type: NodePort
