db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deploy
  namespace: mysql
spec:
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db-cont
        image: mysql
        ports:
        - containerPort: 3306
        resources:
          requests:
            cpu: "1000m"
            memory: "1Gi"
          limits:
            cpu: "1000m"
            memory: "1Gi"
        volumeMounts:
        - name: db-pv
          mountPath: /var/lib/mysql
      volumes:
      - name: db-pv
        persistentVolumeClaim:
          claimName: db-pvc
  replicas: 1
---
apiVersion: v1 
kind: Service
metadata:
  name: db-svc
  namespace: mysql
spec:
  selector:
    app: db
  ports:
    - name: db-port
      port: 3306
  type: ClusterIP
