wp-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-deploy
  namespace: mysql
spec:
  selector:
    matchLabels:
      app: wp
  template:
    metadata:
      labels:
        app: wp
    spec:
      containers:
      - name: wp-cont
        image: wordpress:6.5.4
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "800m"
            memory: "500Mi"
          limits:
            cpu: "800m"
            memory: "500Mi"
        volumeMounts:
        - name: wp-pv
          mountPath: /var/www/html
      volumes:
      - name: wp-pv
        persistentVolumeClaim:
          claimName: wp-pvc
  replicas: 1
---
apiVersion: v1
kind: Service
metadata:
  name: wp-svc
  namespace: mysql
spec:
  selector:
    app: wp
  ports:
    - name: http-wp
      port: 80
      nodePort: 30100
      targetPort: 80
  type: NodePort
